--- a/src/css/main.css
+++ b/src/css/main.css
@@ -5,18 +5,18 @@
   |============================
 */
 /* Common styles */
-@import url("./reset.css");
-@import url("./container.css");
+@import url('./reset.css');
+@import url('./container.css');
 
 /* Sections style */
-@import url("./header.css");
-@import url("./hero.css");
-@import url("./welcome.css");
-@import url("./quality.css");
-@import url("./moments.css");
-@import url("./subscribe.css");
-@import url("./comments.css");
-@import url("./location.css");
-@import url("./footer.css");
-@import url("./modal-mobile.css");
-@import url("./extra.css");
+@import url('./header.css');
+@import url('./hero.css');
+@import url('./welcome.css');
+@import url('./quality.css');
+@import url('./experience.css');
+@import url('./subscribe.css');
+@import url('./testimonials.css');
+@import url('./location.css');
+@import url('./footer.css');
+@import url('./mobile-menu.css');
+@import url('./extra.css');
