add HTML structure and CSS styles

--- a/src/partials/subscribe.html
+++ b/src/partials/subscribe.html
@@ -1,3 +1,37 @@
-<svg class="icon">
-  <use xlink:href="#icon-icon-Facebooksvg"></use>
-</svg>
+<section class="subscribe-section">
+  <div class="subscribe-title">
+  <h2>Join Our Coffee Community</h2>
+  </div>
+  <div class="subscribe-subtitle">
+  <h3>
+    Experience the joy of coffee delivered right to your door. Sign up today!
+  </div>
+  </h3>
+  <div class="blok-form">
+     <form class="form-subscribe">
+      <label class="label-subscribe" for="input-subscribe">
+        <input
+          class="input-subscribe"
+          type="email"
+          id="input-subscribe"
+          name="input-subscribe"
+          placeholder="Your Email Here"
+        />
+      </label>
+      <button class="submit" type="submit">
+       Subscribe
+        <svg class="icon-chevrons-right" width="24" height="24">
+          <use href="../images/icons.svg#icon-chevrons-right"></use>
+        </svg>
+      </button>
+    </form>
+    <p>By clicking Get Started, you agree to our Terms and Conditions.</p>
+  </div>
+  <div>
+    <img class ="subscribe-img" alt="Two people working on a laptop and a monitor at a large wooden desk in a modern office."
+    src="../images/subscribe/subscribe.jpg"
+    srcset="../images/subscribe/subscribe-mob-1x.jpg 1x,
+     ../images/subscribe/subscribe-mob-2x.jpg 2x"
+    width="360" />
+  </div>
+</section>
