--- a/src/partials/header.html
+++ b/src/partials/header.html
@@ -24,7 +24,12 @@
         </li>
       </ul>
     </nav>
-    <button class="header-burger-btn" type="button">
+    <button
+      class="header-burger-btn"
+      type="button"
+      aria-label="Open menu"
+      data-menu-open
+    >
       <svg class="header-burger" width="24" height="24">
         <use xlink:href="#icon-icon-menusvg"></use>
       </svg>
