--- a/src/partials/mobile-menu.html
+++ b/src/partials/mobile-menu.html
@@ -1,11 +1,11 @@
-<div class="container mobile-menu">
+<div class="container mobile-menu" data-menu>
   <div class="mobile-logo-close">
     <a class="mobile-logo-link" href="/index.html">
       <svg class="mobile-logo" width="63" height="36">
         <use xlink:href="#icon-icon-logosvg"></use>
       </svg>
     </a>
-    <button class="mobile-close-btn" type="button">
+    <button class="mobile-close-btn" type="button" data-menu-close>
       <svg class="mobile-close" width="24" height="24  ">
         <use xlink:href="#icon-icon-xsvg"></use>
       </svg>
