--- a/src/css/container.css
+++ b/src/css/container.css
@@ -1,9 +1,14 @@
 .container {
-  min-width: 320px;
-  max-width: 375px;
+  width: 100%;
   padding-left: 16px;
   padding-right: 16px;
   margin: 0 auto;
+}
+
+@media screen and (min-width: 375px) {
+  .container {
+    max-width: 375px;
+  }
 }
 
 @media screen and (min-width: 768px) {
