--- a/src/partials/testimonials.html
+++ b/src/partials/testimonials.html
@@ -7,27 +7,27 @@
           <ul class="testimonials-wrapper-list">
             <li class="testimonials-wrapper-item">
               <svg class="testimonials-icon" width="20" height="19">
-                <use href=""></use>
+                <use href="../images/icons.svg#icon-star-filled"></use>
               </svg>
             </li>
             <li class="testimonials-wrapper-item">
               <svg class="testimonials-icon" width="20" height="19">
-                <use href=""></use>
+                <use href="../images/icons.svg#icon-star-filled"></use>
               </svg>
             </li>
             <li class="testimonials-wrapper-item">
               <svg class="testimonials-icon" width="20" height="19">
-                <use href=""></use>
+                <use href="../images/icons.svg#icon-star-filled"></use>
               </svg>
             </li>
             <li class="testimonials-wrapper-item">
               <svg class="testimonials-icon" width="20" height="19">
-                <use href=""></use>
+                <use href="../images/icons.svg#icon-star-filled"></use>
               </svg>
             </li>
             <li class="testimonials-wrapper-item">
-              <svg class="testimonials-icon" width="20" height="19">
-                <use href=""></use>
+              <svg class="testimonials-icon-accent" width="20" height="19">
+                <use href="../images/icons.svg#icon-star-outline"></use>
               </svg>
             </li>
           </ul>
@@ -41,27 +41,27 @@
           <ul class="testimonials-wrapper-list">
             <li class="testimonials-wrapper-item">
               <svg class="testimonials-icon" width="20" height="19">
-                <use href=""></use>
+                <use href="../images/icons.svg#icon-star-filled"></use>
               </svg>
             </li>
             <li class="testimonials-wrapper-item">
               <svg class="testimonials-icon" width="20" height="19">
-                <use href=""></use>
+                <use href="../images/icons.svg#icon-star-filled"></use>
               </svg>
             </li>
             <li class="testimonials-wrapper-item">
               <svg class="testimonials-icon" width="20" height="19">
-                <use href=""></use>
+                <use href="../images/icons.svg#icon-star-filled"></use>
               </svg>
             </li>
             <li class="testimonials-wrapper-item">
               <svg class="testimonials-icon" width="20" height="19">
-                <use href=""></use>
+                <use href="../images/icons.svg#icon-star-filled"></use>
               </svg>
             </li>
             <li class="testimonials-wrapper-item">
-              <svg class="testimonials-icon" width="20" height="19">
-                <use href=""></use>
+              <svg class="testimonials-icon-accent" width="20" height="19">
+                <use href="../images/icons.svg#icon-star-outline"></use>
               </svg>
             </li>
           </ul>
@@ -75,27 +75,27 @@
           <ul class="testimonials-wrapper-list">
             <li class="testimonials-wrapper-item">
               <svg class="testimonials-icon" width="20" height="19">
-                <use href=""></use>
+                <use href="../images/icons.svg#icon-star-filled"></use>
               </svg>
             </li>
             <li class="testimonials-wrapper-item">
               <svg class="testimonials-icon" width="20" height="19">
-                <use href=""></use>
+                <use href="../images/icons.svg#icon-star-filled"></use>
               </svg>
             </li>
             <li class="testimonials-wrapper-item">
               <svg class="testimonials-icon" width="20" height="19">
-                <use href=""></use>
+                <use href="../images/icons.svg#icon-star-filled"></use>
               </svg>
             </li>
             <li class="testimonials-wrapper-item">
               <svg class="testimonials-icon" width="20" height="19">
-                <use href=""></use>
+                <use href="../images/icons.svg#icon-star-filled"></use>
               </svg>
             </li>
             <li class="testimonials-wrapper-item">
               <svg class="testimonials-icon" width="20" height="19">
-                <use href=""></use>
+                <use href="../images/icons.svg#icon-star-filled"></use>
               </svg>
             </li>
           </ul>
@@ -109,27 +109,27 @@
           <ul class="testimonials-wrapper-list">
             <li class="testimonials-wrapper-item">
               <svg class="testimonials-icon" width="20" height="19">
-                <use href=""></use>
+                <use href="../images/icons.svg#icon-star-filled"></use>
               </svg>
             </li>
             <li class="testimonials-wrapper-item">
               <svg class="testimonials-icon" width="20" height="19">
-                <use href=""></use>
+                <use href="../images/icons.svg#icon-star-filled"></use>
               </svg>
             </li>
             <li class="testimonials-wrapper-item">
               <svg class="testimonials-icon" width="20" height="19">
-                <use href=""></use>
+                <use href="../images/icons.svg#icon-star-filled"></use>
               </svg>
             </li>
             <li class="testimonials-wrapper-item">
-              <svg class="testimonials-icon" width="20" height="19">
-                <use href=""></use>
+              <svg class="testimonials-icon-accent" width="20" height="19">
+                <use href="../images/icons.svg#icon-star-outline"></use>
               </svg>
             </li>
             <li class="testimonials-wrapper-item">
-              <svg class="testimonials-icon" width="20" height="19">
-                <use href=""></use>
+              <svg class="testimonials-icon-accent" width="20" height="19">
+                <use href="../images/icons.svg#icon-star-outline"></use>
               </svg>
             </li>
           </ul>
@@ -143,27 +143,27 @@
           <ul class="testimonials-wrapper-list">
             <li class="testimonials-wrapper-item">
               <svg class="testimonials-icon" width="20" height="19">
-                <use href=""></use>
+                <use href="../images/icons.svg#icon-star-filled"></use>
               </svg>
             </li>
             <li class="testimonials-wrapper-item">
               <svg class="testimonials-icon" width="20" height="19">
-                <use href=""></use>
+                <use href="../images/icons.svg#icon-star-filled"></use>
               </svg>
             </li>
             <li class="testimonials-wrapper-item">
               <svg class="testimonials-icon" width="20" height="19">
-                <use href=""></use>
+                <use href="../images/icons.svg#icon-star-filled"></use>
               </svg>
             </li>
             <li class="testimonials-wrapper-item">
               <svg class="testimonials-icon" width="20" height="19">
-                <use href=""></use>
+                <use href="../images/icons.svg#icon-star-filled"></use>
               </svg>
             </li>
             <li class="testimonials-wrapper-item">
               <svg class="testimonials-icon" width="20" height="19">
-                <use href=""></use>
+                <use href="../images/icons.svg#icon-star-filled"></use>
               </svg>
             </li>
           </ul>
@@ -177,27 +177,27 @@
           <ul class="testimonials-wrapper-list">
             <li class="testimonials-wrapper-item">
               <svg class="testimonials-icon" width="20" height="19">
-                <use href=""></use>
+                <use href="../images/icons.svg#icon-star-filled"></use>
               </svg>
             </li>
             <li class="testimonials-wrapper-item">
               <svg class="testimonials-icon" width="20" height="19">
-                <use href=""></use>
+                <use href="../images/icons.svg#icon-star-filled"></use>
               </svg>
             </li>
             <li class="testimonials-wrapper-item">
               <svg class="testimonials-icon" width="20" height="19">
-                <use href=""></use>
+                <use href="../images/icons.svg#icon-star-filled"></use>
               </svg>
             </li>
             <li class="testimonials-wrapper-item">
-              <svg class="testimonials-icon" width="20" height="19">
-                <use href=""></use>
+              <svg class="testimonials-icon-accent" width="20" height="19">
+                <use href="../images/icons.svg#icon-star-outline"></use>
               </svg>
             </li>
             <li class="testimonials-wrapper-item">
-              <svg class="testimonials-icon" width="20" height="19">
-                <use href=""></use>
+              <svg class="testimonials-icon-accent" width="20" height="19">
+                <use href="../images/icons.svg#icon-star-outline"></use>
               </svg>
             </li>
           </ul>
@@ -211,27 +211,27 @@
           <ul class="testimonials-wrapper-list">
             <li class="testimonials-wrapper-item">
               <svg class="testimonials-icon" width="20" height="19">
-                <use href=""></use>
+                <use href="../images/icons.svg#icon-star-filled"></use>
               </svg>
             </li>
             <li class="testimonials-wrapper-item">
               <svg class="testimonials-icon" width="20" height="19">
-                <use href=""></use>
+                <use href="../images/icons.svg#icon-star-filled"></use>
               </svg>
             </li>
             <li class="testimonials-wrapper-item">
               <svg class="testimonials-icon" width="20" height="19">
-                <use href=""></use>
+                <use href="../images/icons.svg#icon-star-filled"></use>
               </svg>
             </li>
             <li class="testimonials-wrapper-item">
               <svg class="testimonials-icon" width="20" height="19">
-                <use href=""></use>
+                <use href="../images/icons.svg#icon-star-filled"></use>
               </svg>
             </li>
             <li class="testimonials-wrapper-item">
-              <svg class="testimonials-icon" width="20" height="19">
-                <use href=""></use>
+              <svg class="testimonials-icon-accent" width="20" height="19">
+                <use href="../images/icons.svg#icon-star-outline"></use>
               </svg>
             </li>
           </ul>
@@ -245,27 +245,27 @@
           <ul class="testimonials-wrapper-list">
             <li class="testimonials-wrapper-item">
               <svg class="testimonials-icon" width="20" height="19">
-                <use href=""></use>
+                <use href="../images/icons.svg#icon-star-filled"></use>
               </svg>
             </li>
             <li class="testimonials-wrapper-item">
               <svg class="testimonials-icon" width="20" height="19">
-                <use href=""></use>
+                <use href="../images/icons.svg#icon-star-filled"></use>
               </svg>
             </li>
             <li class="testimonials-wrapper-item">
               <svg class="testimonials-icon" width="20" height="19">
-                <use href=""></use>
+                <use href="../images/icons.svg#icon-star-filled"></use>
               </svg>
             </li>
             <li class="testimonials-wrapper-item">
               <svg class="testimonials-icon" width="20" height="19">
-                <use href=""></use>
+                <use href="../images/icons.svg#icon-star-filled"></use>
               </svg>
             </li>
             <li class="testimonials-wrapper-item">
-              <svg class="testimonials-icon" width="20" height="19">
-                <use href=""></use>
+              <svg class="testimonials-icon-accent" width="20" height="19">
+                <use href="../images/icons.svg#icon-star-outline"></use>
               </svg>
             </li>
           </ul>
