--- a/src/partials/subscribe.html
+++ b/src/partials/subscribe.html
@@ -1,37 +1,46 @@
 <section class="subscribe-section">
-  <div class="subscribe-title">
-  <h2>Join Our Coffee Community</h2>
+  <div class="wraper">
+    
+      <h2 class="subscribe-title section-title">Join Our Coffee Community</h2>
+   
+    <div class="subscribe-text">
+      <p>
+        Experience the joy of coffee delivered right to your door. Sign up
+        today!
+      </p>
+    </div>
+    <div class="blok-form">
+      <form class="form-subscribe">
+        <label class="label-subscribe" for="input-subscribe">
+          <input
+            class="input-subscribe"
+            type="email"
+            id="input-subscribe"
+            name="input-subscribe"
+            placeholder="Your Email Here"
+          />
+          <span class="error-message">Error Text</span>
+        </label>
+
+        <button class="submit" type="submit">
+          Subscribe
+          <svg class="icon-chevrons-right" width="24" height="24">
+            <use href="/images/icons.svg#icon-chevrons-right"></use>
+          </svg>
+        </button>
+      </form>
+      <p>By clicking Get Started, you agree to our Terms and Conditions.</p>
+    </div>
   </div>
-  <div class="subscribe-subtitle">
-  <h3>
-    Experience the joy of coffee delivered right to your door. Sign up today!
-  </div>
-  </h3>
-  <div class="blok-form">
-     <form class="form-subscribe">
-      <label class="label-subscribe" for="input-subscribe">
-        <input
-          class="input-subscribe"
-          type="email"
-          id="input-subscribe"
-          name="input-subscribe"
-          placeholder="Your Email Here"
-        />
-      </label>
-      <button class="submit" type="submit">
-       Subscribe
-        <svg class="icon-chevrons-right" width="24" height="24">
-          <use href="../images/icons.svg#icon-chevrons-right"></use>
-        </svg>
-      </button>
-    </form>
-    <p>By clicking Get Started, you agree to our Terms and Conditions.</p>
-  </div>
-  <div>
-    <img class ="subscribe-img" alt="Two people working on a laptop and a monitor at a large wooden desk in a modern office."
-    src="../images/subscribe/subscribe.jpg"
-    srcset="../images/subscribe/subscribe-mob-1x.jpg 1x,
-     ../images/subscribe/subscribe-mob-2x.jpg 2x"
-    width="360" />
-  </div>
+  <div class="image">
+  <picture>
+    <picture>
+  <source media="(min-width: 1158px)" srcset="/images/subscribe/subscribe-desk-1x.jpg 1x, /images/subscribe/subscribe-desk-2x.jpg 2x" />
+  <source media="(min-width: 768px)" srcset="/images/subscribe/subscribe-tab-1x.jpg 1x, /images/subscribe/subscribe-tab-2x.jpg 2x" />
+  <img class="subscribe-img" src="/images/subscribe/subscribe-mob-1x.jpg" srcset="/images/subscribe/subscribe-mob-2x.jpg 2x" alt="People working in office" />
+</picture>
+
+  </picture>
+</div>
+
 </section>
