update container styles and add new images

--- a/src/css/subscribe.css
+++ b/src/css/subscribe.css
@@ -1,12 +1,10 @@
 /* #region Subscribe*/
 .subscribe-section {
-  background-color: #e0cbb4;
-  padding: 64px 16px;
+   padding: 0 16px;
 }
 
 .subscribe-title {
-     text-transform: uppercase;
-  color: #0b0803;
+     
   margin-bottom: 24px;
 }
 
