--- a/src/partials/subscribe.html
+++ b/src/partials/subscribe.html
@@ -35,9 +35,9 @@
   <div class="image">
   <picture>
     <picture>
-  <source media="(min-width: 1158px)" srcset="/images/subscribe/subscribe-desk-1x.jpg 1x, /images/subscribe/subscribe-desk-2x.jpg 2x" />
-  <source media="(min-width: 768px)" srcset="/images/subscribe/subscribe-tab-1x.jpg 1x, /images/subscribe/subscribe-tab-2x.jpg 2x" />
-  <img class="subscribe-img" src="/images/subscribe/subscribe-mob-1x.jpg" srcset="/images/subscribe/subscribe-mob-2x.jpg 2x" alt="People working in office" />
+  <source media="(min-width: 1158px)" srcset="/images/subscribe/subscribe-desktop@1x.jpg 1x, /images/subscribe/subscribe-desktop@2x.jpg 2x" />
+  <source media="(min-width: 768px)" srcset="/images/subscribe/subscribe-tab@1x.jpg 1x, /images/subscribe/subscribe-tab@2x.jpg 2x" />
+  <img class="subscribe-img" src="/images/subscribe/subscribe-mob@1x.jpg" srcset="/images/subscribe/subscribe-mob@2x.jpg 2x" alt="People working in office" />
 </picture>
 
   </picture>
