--- a/src/partials/location.html
+++ b/src/partials/location.html
@@ -10,7 +10,7 @@
         <ul class="loc-contacts-list">
             <li class="loc-item">
                 <svg class="loc-icon" width="32" height="32">
-                  <use href=""></use>
+                  <use href="/images/icons.svg#icon-envelope"></use>
                 </svg>
                 <h3 class="loc-contacts-title">EMAIL</h3>
                 <address>
@@ -19,7 +19,7 @@
             </li>
             <li class="loc-item">
                 <svg class="loc-icon" width="32" height="32">
-                    <use href=""></use>
+                    <use href="/images/icons.svg#icon-phone"></use>
                 </svg>
                 <h3 class="loc-contacts-title">PHONE</h3>
                 <address>
@@ -28,7 +28,7 @@
             </li>
             <li class="loc-item">
                 <svg class="loc-icon" width="32" height="32">
-                    <use href=""></use>
+                    <use href="/images/icons.svg#icon-map"></use>
                 </svg>
                 <h3 class="loc-contacts-title">OFFICE</h3>
                 <address>
@@ -36,7 +36,7 @@
                 <a class="loc-map-link" href="https://maps.app.goo.gl/iyUjDjZmxvcZtBtNA" target="_blank">Get Directions
                     <span class="loc-address-icon">
                         <svg class="loc-icon" width="24" height="24">
-                          <use href=""></use>
+                          <use href="/images/icons.svg#icon-chevron-right"></use>
                         </svg>
                     </span>
                 </a>
