--- a/src/css/location.css
+++ b/src/css/location.css
@@ -87,6 +87,9 @@
 }
 
 .loc-map-link{
+    display: inline-flex;
+    align-items: center;
+    gap: 8px;
     font-style: normal;
     padding-top: 16px;
     font-weight: 500;
@@ -104,9 +107,7 @@
     opacity: 0.7;
 }
 
-.loc-address-icon {
-    color: #0b0803;
-}
+
 
 .map-box {
     margin-top:32px;
