--- a/src/css/mobile-menu.css
+++ b/src/css/mobile-menu.css
@@ -4,7 +4,7 @@
   left: 0;
   width: 100%;
   height: 100vh;
-  z-index: 999;
+  /* z-index: 999; */
   display: flex;
   flex-direction: column;
   opacity: 0;
@@ -13,6 +13,8 @@
   transition:
     opacity 250ms ease,
     visibility 250ms ease;
+
+  background-color: #e0cbb4;
 }
 
 .mobile-menu.is-open {
@@ -103,3 +105,9 @@
   .mobile-item-link:active {
     opacity: 0.2;
   } */
+
+@media (min-width: 768px) {
+  .mobile-menu {
+    display: none;
+  }
+}
