--- a/src/partials/header.html
+++ b/src/partials/header.html
@@ -2,7 +2,7 @@
   <div class="container header-container">
     <a class="header-logo-link" href="index.html">
       <svg class="header-logo" width="63" height="36">
-        <use xlink:href="#icon-icon-logosvg"></use>
+        <use href="/images/icons.svg#icon-logo"></use>
       </svg>
     </a>
     <nav class="header-nav">
@@ -31,7 +31,7 @@
       data-menu-open
     >
       <svg class="header-burger" width="24" height="24">
-        <use xlink:href="#icon-icon-menusvg"></use>
+        <use href="/images/icons.svg#icon-menu"></use>
       </svg>
     </button>
   </div>
