--- a/src/css/location.css
+++ b/src/css/location.css
@@ -134,6 +134,9 @@
     }
 }
 @media screen and (min-width: 1440px) {
+    .loc-title {
+        font-size: 48px;
+    }
     .loc-content {
         flex-direction: row;
         justify-content: space-between;
