--- a/src/css/quality.css
+++ b/src/css/quality.css
@@ -239,7 +239,7 @@ img{
         margin: 0 auto 18px;
     }
 
-    .quality-section-descr{
+    .quality-descr{
         line-height: 1.5;
         font-size: 18px;
         max-width: 768px;
