--- a/src/partials/subscribe.html
+++ b/src/partials/subscribe.html
@@ -1,14 +1,13 @@
 <section class="subscribe-section">
-  <div class="wraper">
-    
+  <div class="container section subscribe-container">
+    <div class="wraper">
       <h2 class="subscribe-title section-title">Join Our Coffee Community</h2>
    
-    <div class="subscribe-text">
-      <p>
+          <p class="subscribe-text">
         Experience the joy of coffee delivered right to your door. Sign up
         today!
       </p>
-    </div>
+   
     <div class="blok-form">
       <form class="form-subscribe">
         <label class="label-subscribe" for="input-subscribe">
@@ -31,16 +30,16 @@
       </form>
       <p>By clicking Get Started, you agree to our Terms and Conditions.</p>
     </div>
-  </div>
+    </div>
+  
   <div class="image">
-  <picture>
+  
     <picture>
-  <source media="(min-width: 1158px)" srcset="/images/subscribe/subscribe-desktop@1x.jpg 1x, /images/subscribe/subscribe-desktop@2x.jpg 2x" />
+  <source media="(min-width: 1440px)" srcset="/images/subscribe/subscribe-desktop@1x.jpg 1x, /images/subscribe/subscribe-desktop@2x.jpg 2x" />
   <source media="(min-width: 768px)" srcset="/images/subscribe/subscribe-tab@1x.jpg 1x, /images/subscribe/subscribe-tab@2x.jpg 2x" />
   <img class="subscribe-img" src="/images/subscribe/subscribe-mob@1x.jpg" srcset="/images/subscribe/subscribe-mob@2x.jpg 2x" alt="People working in office" />
 </picture>
 
-  </picture>
 </div>
-
+</div>
 </section>
