--- a/src/partials/subscribe.html
+++ b/src/partials/subscribe.html
@@ -1,45 +1,57 @@
-<section class="subscribe-section">
-  <div class="container section subscribe-container">
+<section class="section">
+  <div class="container">
     <div class="wraper">
       <h2 class="subscribe-title section-title">Join Our Coffee Community</h2>
-   
-          <p class="subscribe-text">
+      <p class="subscribe-text">
         Experience the joy of coffee delivered right to your door. Sign up
         today!
       </p>
-   
-    <div class="blok-form">
-      <form class="form-subscribe">
-        <label class="label-subscribe" for="input-subscribe">
-          <input
-            class="input-subscribe"
-            type="email"
-            id="input-subscribe"
-            name="input-subscribe"
-            placeholder="Your Email Here"
-          />
-          <span class="error-message">Error Text</span>
-        </label>
-
-        <button class="submit" type="submit">
-          Subscribe
-          <svg class="icon-chevrons-right" width="24" height="24">
-            <use href="/images/icons.svg#icon-chevrons-right"></use>
-          </svg>
-        </button>
-      </form>
-      <p>By clicking Get Started, you agree to our Terms and Conditions.</p>
+      <div class="blok-form">
+        <form class="form-subscribe">
+          <label class="label-subscribe" for="input-subscribe">
+            <input
+              class="input-subscribe"
+              type="email"
+              id="input-subscribe"
+              name="input-subscribe"
+              placeholder="Your Email Here"
+            />
+            <span class="error-message">Error Text</span>
+          </label>
+          <button class="submit" type="submit">
+            Subscribe
+            <svg class="icon-chevrons-right" width="24" height="24">
+              <use href="/images/icons.svg#icon-chevrons-right"></use>
+            </svg>
+          </button>
+        </form>
+        <p>By clicking Get Started, you agree to our Terms and Conditions.</p>
+      </div>
     </div>
+    <div class="image">
+      <picture>
+        <source
+          media="(min-width: 1440px)"
+          srcset="
+            /images/subscribe/subscribe-desktop@1x.jpg 1x,
+            /images/subscribe/subscribe-desktop@2x.jpg 2x
+          "
+        />
+        <source
+          media="(min-width: 768px)"
+          srcset="
+            /images/subscribe/subscribe-tab@1x.jpg 1x,
+            /images/subscribe/subscribe-tab@2x.jpg 2x
+          "
+        />
+        <img
+          class="subscribe-img"
+          src="/images/subscribe/subscribe-mob@1x.jpg"
+          srcset="/images/subscribe/subscribe-mob@2x.jpg 2x"
+          alt="People working in office"
+          width="704"
+        />
+      </picture>
     </div>
-  
-  <div class="image">
-  
-    <picture>
-  <source media="(min-width: 1440px)" srcset="/images/subscribe/subscribe-desktop@1x.jpg 1x, /images/subscribe/subscribe-desktop@2x.jpg 2x" />
-  <source media="(min-width: 768px)" srcset="/images/subscribe/subscribe-tab@1x.jpg 1x, /images/subscribe/subscribe-tab@2x.jpg 2x" />
-  <img class="subscribe-img" src="/images/subscribe/subscribe-mob@1x.jpg" srcset="/images/subscribe/subscribe-mob@2x.jpg 2x" alt="People working in office" />
-</picture>
-
-</div>
-</div>
+  </div>
 </section>
