--- a/src/css/subscribe.css
+++ b/src/css/subscribe.css
@@ -1,10 +1,6 @@
 /* #region Subscribe*/
-.subscribe-section {
-  
-}
 
 .subscribe-title {
-     
   margin-bottom: 24px;
 }
 
@@ -32,7 +28,8 @@
 
 .subscribe-img {
   border-radius: 40px;
-  width: 288px;
+  min-width: 288px;
+  width: 100%;
   height: 400px;
   object-fit: cover;
 }
@@ -52,7 +49,8 @@
   color: #ffffff;
   border-radius: 100px;
   padding: 10px 24px;
-  width: 288px;
+  min-width: 288px;
+  width: 100%;
   height: 44px;
   box-shadow:
     0 1px 2px 0 rgba(11, 8, 3, 0.05),
@@ -62,14 +60,15 @@
     inset 0 32px 24px 0 rgba(255, 255, 255, 0.05);
   border: none;
   cursor: pointer;
-  margin-top: 24px;
+  /* margin-top: 24px; */
 }
 
 .input-subscribe {
   margin-bottom: 0;
   padding: 8px 12px;
   border-radius: 12px;
-  width: 288px;
+  min-width: 288px;
+  width: 100%;
   height: 40px;
   background-color: #e0cbb4;
   border: 1px solid rgba(11, 8, 3, 0.15);
@@ -77,10 +76,8 @@
 
 .submit:hover {
   background-color: #5a3f2d;
-  transform: translateY(-2px); 
+  transform: translateY(-2px);
 }
-
-
 
 .icon-chevrons-right {
   fill: currentColor;
@@ -95,7 +92,6 @@
   font-weight: 400;
   font-size: 12px;
   line-height: 1.5;
-
   opacity: 0;
   visibility: hidden;
   height: 18px;
@@ -103,28 +99,27 @@
   transition: opacity 0.2s ease;
 }
 
-input:not(:placeholder-shown):invalid + .error-message {
+input:not(:placeholder-shown):invalid+.error-message {
   display: block;
-
   opacity: 1;
   visibility: visible;
 }
 
 .image {
-    border-radius: 40px;
+  border-radius: 40px;
 }
+
 /* #endregion Subscribe*/
 
 /* #region Media Tablet*/
 @media screen and (min-width: 768px) {
-  .subscribe-section {
-    
-  }
+  .subscribe-section {}
 
   .form-subscribe {
-display: flex;
-gap: 24px;
+    display: flex;
+    gap: 24px;
   }
+
   .input-subscribe {
     width: 340px;
     height: 44px;
@@ -140,12 +135,11 @@ gap: 24px;
     width: 100%;
   }
 
-  }
+}
 
 @media (min-device-pixel-ratio: 2),
-  (min-resolution: 192dpi),
-  (min-resolution: 2dppx) {
-  }
+(min-resolution: 192dpi),
+(min-resolution: 2dppx) {}
 
 /* #endregion Media Tablet*/
 
@@ -153,15 +147,23 @@ gap: 24px;
 @media screen and (min-width: 1440px) {
   .container {
     max-width: 1440px;
-
     display: flex;
     gap: 32px;
   }
-  
-      .form-subscribe {
+
+  .section-title {
+    font-size: 48px
+  }
+
+
+  .blok-form {
+    min-width: 640px;
+  }
+
+  .form-subscribe {
     gap: 16px;
   }
-   
+
 }
 
 /* #endregion Media Desktop*/
