feat: finish footer development based on provided snippet

--- a/src/partials/footer.html
+++ b/src/partials/footer.html
@@ -25,7 +25,7 @@
 <li class="footer-social-item">
 <a class="footer-social-link" href="https://x.com/">
 <svg class="footer-social-icon" width="27" height="27">
-<use href="/images/icons.svg#icon-X"></use>
+<use href="../images/icons.svg#icon-twitter"></use>
 </svg>
 </a>
 </li>
@@ -49,6 +49,6 @@
 </li>
 </ul>
 </div>
-<p class="footer-text">© 2025 CoffeeJoy. All rights reserved.</p>
+<p class="footer-text">&#169; 2025 CoffeeJoy. All rights reserved.</p>
 </div>
 </footer>
