--- a/src/css/footer.css
+++ b/src/css/footer.css
@@ -1,9 +1,7 @@
-.footer {
-}
+/*#region Footer#*/
 
 .footer-container {
   background-color: #b58869;
-
   padding: 24px 16px;
 }
 
@@ -12,14 +10,11 @@
 
   border: 1px solid rgba(11, 8, 3, 0.15);
   border-radius: 40px;
-  padding: 32px 48px;
-  width: 288px;
+  padding: 32px 46px;
+  min-width: 288px;
   height: 500px;
-
+  width: 100%;
   margin: 0 auto 32px;
-}
-
-.footer-logo-social {
 }
 
 .footer-logo-link {
@@ -84,3 +79,75 @@
   align-items: center;
   justify-content: center;
 }
+/*#endregion Footer#*/
+
+/* #region Media Tablet*/
+@media screen and (min-width: 768px) {
+  .footer-container {
+    min-width: 768px;
+    width: 100%;
+    height: 257px;
+    padding-left: 32px;
+    padding-right: 32px;
+  }
+
+  .footer-content {
+    width: 704px;
+    height: 156px;
+  }
+
+  .footer-logo-link {
+    width: 84px;
+  }
+
+  .footer-logo-social {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    height: 36px;
+    gap: 40px;
+  }
+
+  .footer-social {
+    gap: 12px;
+  }
+
+  .footer-social-item {
+  }
+
+  .footer-social-link {
+    width: 32px;
+    height: 32px;
+  }
+  .footer-nav-list {
+    flex-direction: row;
+    margin-top: 32px;
+  }
+}
+/* #endregion Media Tablet*/
+
+/* #region Media Desktop*/
+@media screen and (min-width: 1440px) {
+  .footer-container {
+    min-width: 1440px;
+    height: 201px;
+    padding-left: 64px;
+    padding-right: 64px;
+  }
+
+  .footer-content {
+    display: flex;
+    justify-content: space-between;
+    width: 1312px;
+    height: 100px;
+  }
+
+  .footer-logo-social {
+    justify-content: flex-start;
+  }
+
+  .footer-nav-list {
+    margin-top: 0;
+  }
+}
+/* #endregion Media Desktop*/
