шо та пошло не так

--- a/src/css/quality.css
+++ b/src/css/quality.css
@@ -2,6 +2,10 @@
     padding: 64px 0;
 }
 
+.quality-container{
+    text-align: center;
+}
+
 .quality-section-title{
     font-family: 'Aboreto', sans-serif;
 }
