--- a/src/partials/quality.html
+++ b/src/partials/quality.html
@@ -1,5 +1,5 @@
 <section id="quality" class="quality-section">
-    <div class="container child">
+    <div class="quality-container">
         <div class="quality-intro">
             <p class="quality-section-name">Quality</p>
             <h2 class="quality-section-title">Why CoffeeJoy Stands Out from the Rest</h2>
