--- a/src/css/subscribe.css
+++ b/src/css/subscribe.css
@@ -59,11 +59,12 @@
     inset 0 2px 1px 0 rgba(255, 255, 255, 0.25),
     inset 0 32px 24px 0 rgba(255, 255, 255, 0.05);
   border: none;
-  cursor: pointer;
+  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
   /* margin-top: 24px; */
 }
 
 .input-subscribe {
+  outline: none;
   margin-bottom: 0;
   padding: 8px 12px;
   border-radius: 12px;
@@ -74,9 +75,16 @@
   border: 1px solid rgba(11, 8, 3, 0.15);
 }
 
-.submit:hover {
-  background-color: #5a3f2d;
+.submit:hover,
+.submit:focus {
+  background-color: #c29d84;
   transform: translateY(-2px);
+}
+
+.submit:active {
+  background: #60432f;
+  box-shadow: none;
+  transform: scale(0.98);
 }
 
 .icon-chevrons-right {
