--- a/src/partials/welcome.html
+++ b/src/partials/welcome.html
@@ -1,5 +1,5 @@
-<section class="welcome">
-  <div class="welcome__container">
+<section class="welcome section">
+  <div class="container">
     <div class="welcome__top">
       <div class="welcome__left">
         <p class="welcome__label">Welcome</p>
@@ -19,7 +19,7 @@
 
           <span class="welcome__btn-icon" aria-hidden="true">
             <svg class="welcome__btn-svg" width="18" height="18">
-              <use href="#icon-icon-map-pinsvg"></use>
+              <use href="/images/icons.svg#icon-map-pin"></use>
             </svg>
           </span>
         </a>
