refactor: update experience and footer sections styles and structure

--- a/src/css/footer.css
+++ b/src/css/footer.css
@@ -85,7 +85,7 @@
 @media screen and (min-width: 768px) {
   .footer-container {
     min-width: 768px;
-    width: 100%;
+    width: 0;
     height: 257px;
     padding-left: 32px;
     padding-right: 32px;
