--- a/src/css/hero.css
+++ b/src/css/hero.css
@@ -13,8 +13,8 @@
   background-image:
     linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)),
     image-set(
-      url('../images/hero/hero-mob-1x.jpg') 1x,
-      url('../images/hero/hero-mob-2x.jpg') 2x
+      url('/images/hero/hero-mob-1x.jpg') 1x,
+      url('/images/hero/hero-mob-2x.jpg') 2x
     );
   background-repeat: no-repeat;
   background-position: center;
@@ -100,8 +100,8 @@
     background-image:
       linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)),
       image-set(
-        url('../images/hero/hero-tab-1x.jpg') 1x,
-        url('../images/hero/hero-tab-2x.jpg') 2x
+        url('/images/hero/hero-tab-1x.jpg') 1x,
+        url('/images/hero/hero-tab-2x.jpg') 2x
       );
     padding: 311px 0;
   }
@@ -119,8 +119,8 @@
     background-image:
       linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)),
       image-set(
-        url('../images/hero/hero-desk-1x.jpg') 1x,
-        url('../images/hero/hero-desk-2x.jpg') 2x
+        url('/images/hero/hero-desk-1x.jpg') 1x,
+        url('/images/hero/hero-desk-2x.jpg') 2x
       );
   }
 
