--- a/src/partials/footer.html
+++ b/src/partials/footer.html
@@ -1,54 +1,54 @@
 <footer class="footer">
-<div class="footer-container">
-<div class="footer-content">
-<div class="footer-logo-social">
-<a class="footer-logo-link" href="/index.html">
-<svg class="footer-logo" width="146" height="84">
-<use href="/images/icons.svg#icon-logo"></use>
-</svg>
-</a>
-<ul class="footer-social">
-<li class="footer-social-item">
-<a class="footer-social-link" href="https://www.facebook.com/">
-<svg class="footer-social-icon" width="27" height="27">
-<use href="/images/icons.svg#icon-Facebook"></use>
-</svg>
-</a>
-</li>
-<li class="footer-social-item">
-<a class="footer-social-link" href="https://www.instagram.com/">
-<svg class="footer-social-icon" width="27" height="27">
-<use href="/images/icons.svg#icon-Instagram"></use>
-</svg>
-</a>
-</li>
-<li class="footer-social-item">
-<a class="footer-social-link" href="https://x.com/">
-<svg class="footer-social-icon" width="27" height="27">
-<use href="../images/icons.svg#icon-twitter"></use>
-</svg>
-</a>
-</li>
-</ul>
-</div>
-<ul class="footer-nav-list">
-<li class="footer-nav-item">
-<a class="footer-item-link" href="">About us</a>
-</li>
-<li class="footer-nav-item">
-<a class="footer-item-link" href="">Benefits</a>
-</li>
-<li class="footer-nav-item">
-<a class="footer-item-link" href="">Gallery</a>
-</li>
-<li class="footer-nav-item">
-<a class="footer-item-link" href="">Testimonial</a>
-</li>
-<li class="footer-nav-item">
-<a class="footer-item-link" href="">Location</a>
-</li>
-</ul>
-</div>
-<p class="footer-text">&#169; 2025 CoffeeJoy. All rights reserved.</p>
-</div>
+  <div class="footer-container">
+    <div class="footer-content container">
+      <div class="footer-logo-social">
+        <a class="footer-logo-link" href="/index.html">
+          <svg class="footer-logo" width="146" height="84">
+            <use href="/images/icons.svg#icon-logo"></use>
+          </svg>
+        </a>
+        <ul class="footer-social">
+          <li class="footer-social-item">
+            <a class="footer-social-link" href="https://www.facebook.com/">
+              <svg class="footer-social-icon" width="27" height="27">
+                <use href="/images/icons.svg#icon-Facebook"></use>
+              </svg>
+            </a>
+          </li>
+          <li class="footer-social-item">
+            <a class="footer-social-link" href="https://www.instagram.com/">
+              <svg class="footer-social-icon" width="27" height="27">
+                <use href="/images/icons.svg#icon-Instagram"></use>
+              </svg>
+            </a>
+          </li>
+          <li class="footer-social-item">
+            <a class="footer-social-link" href="https://x.com/">
+              <svg class="footer-social-icon" width="27" height="27">
+                <use href="/images/icons.svg#icon-twitter"></use>
+              </svg>
+            </a>
+          </li>
+        </ul>
+      </div>
+      <ul class="footer-nav-list">
+        <li class="footer-nav-item">
+          <a class="footer-item-link" href="">About us</a>
+        </li>
+        <li class="footer-nav-item">
+          <a class="footer-item-link" href="">Benefits</a>
+        </li>
+        <li class="footer-nav-item">
+          <a class="footer-item-link" href="">Gallery</a>
+        </li>
+        <li class="footer-nav-item">
+          <a class="footer-item-link" href="">Testimonial</a>
+        </li>
+        <li class="footer-nav-item">
+          <a class="footer-item-link" href="">Location</a>
+        </li>
+      </ul>
+    </div>
+    <p class="footer-text">&#169; 2025 CoffeeJoy. All rights reserved.</p>
+  </div>
 </footer>
